#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(bin/daemon/src/main.cpp)

AM_INIT_AUTOMAKE(bluetool,0.1)

#AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_RANLIB

# Checks for header files.
AC_HEADER_STDC

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE

# Checks for library functions.
AC_PROG_GCC_TRADITIONAL

AC_LANG_CPLUSPLUS

AC_CONFIG_FILES([Makefile lib/Makefile lib/common/Makefile lib/bluetool/Makefile lib/cbus/Makefile bin/Makefile bin/daemon/Makefile])
AC_CONFIG_SUBDIRS([lib/common lib/bluetool lib/cbus bin/daemon])

AC_OUTPUT
