#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(include/bluetool/hcidevice.h)

AM_INIT_AUTOMAKE(libbluetool,0.1)

#AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_RANLIB

# Checks for libraries.
AC_CHECK_LIB([bluetooth],[hci_open_dev])

# Checks for header files.
AC_CHECK_HEADERS([netinet/in.h sys/ioctl.h sys/socket.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_HEADER_TIME

# Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MALLOC
AC_HEADER_STDC
AC_CHECK_FUNCS([gettimeofday memset strerror])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
