#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(src/cbusobject.cpp)

AC_CONFIG_SRCDIR([include/cbus/cbus.h])
#AC_CONFIG_HEADER([config.h])

AM_INIT_AUTOMAKE(libcbus,0.1)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_RANLIB

# Checks for libraries
AC_CHECK_LIB([dbus-1],[dbus_bus_register])

# Checks for headers
AC_CHECK_HEADERS([sigc++/sigc++.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE

# Checks for library functions.
AC_FUNC_MALLOC


AC_CONFIG_FILES([Makefile])

AC_OUTPUT
