#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(src/eventloop.cpp)

#AC_CONFIG_HEADER([config.h])

AM_INIT_AUTOMAKE(libshack,0.1)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_RANLIB

# We're using C++
AC_LANG([C++])

# Checks for libraries.
#TODO: need a test for libsigc++

# Check for Boost headers
AC_CHECK_HEADER(boost/shared_ptr.hpp)

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h sys/ioctl.h sys/socket.h sys/time.h unistd.h])
AC_CHECK_HEADERS([boost/shared_ptr.hpp])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_HEADER_TIME

# Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([gettimeofday socket])

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
